# MDCommunity

./: .gitignore  AGENTS.md  README.md  cuda_detect.py  pyproject.toml
code/: analysis_comparison.py  check_features.py  cleanup.py  requirement.txt  run.ps1  summarize_real_edges.py  train_comparison.ps1
code/CEMultiDismantler/: MultiDismantler_net_graphsage.py  MultiDismantler_torch.py  PrepareBatchGraph.py  dataset.py  graph.py  log.txt  log2.txt  mvc_env.py  nstep_replay_mem.py  testReal.py  train.py
code/CEMultiDismantler/cache/: comm_prior_Sanremo2016_final_multiplex.edges_layers12_boundary.npz  comm_prior_celegans_connectome_multiplex.edges_layers23_boundary.npz  comm_prior_fao_trade_multiplex.edges_layers324_boundary.npz  comm_prior_fb-tw.edges_layers12_boundary.npz  comm_prior_homo_genetic_multiplex.edges_layers12_boundary.npz  comm_prior_sacchpomb_genetic_multiplex.edges_layers46_boundary.npz
code/CEMultiDismantler/models/: 10k only reward  a  b  b-2  c  compare.csv  d
code/HCA-Dismantler/: MultiDismantler_net_graphsage.py  MultiDismantler_torch.py  PrepareBatchGraph.py  graph.py  mvc_env.py  testReal.py
code/HCA-Dismantler/MRGNN/: aggregators.py  (+1 more)
code/MultiDismantler_community/: MultiDismantler_net_graphsage.py  MultiDismantler_torch.py  PrepareBatchGraph.py  graph.py  graph_struct.py  mvc_env.py  nstep_replay_mem_prioritized.py  testReal.py  testSynthetic.py
code/MultiDismantler_degree_cost/: MultiDismantler_torch.py  PrepareBatchGraph.py
code/MultiDismantler_unit_cost/: MultiDismantler_torch.py  PrepareBatchGraph.py  testReal.py
results/: final_comparison_report.csv
(+159 files in other folders)
