[project]
name = "project-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.9.4",
    "networkx==2.5.1",
    "numpy<2",
    "pandas>=2.3.3",
    "psutil>=7.1.3",
    "tqdm>=4.67.1",
]


[[index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
